--- a/index.html
+++ b/index.html
@@ -205,6 +205,14 @@ body.app-standalone details.app-collapsible .app-muted {
 <!-- INSTALL-PROMPT END -->
 <!-- ===================== -->
 
+  <!-- App / Home Screen Icons -->
+<link rel="apple-touch-icon" href="apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="192x192" href="icon-192.png">
+<link rel="icon" type="image/png" sizes="512x512" href="icon-512.png">
+
+<!-- App behavior -->
+<meta name="theme-color" content="#ffffff">
+
 </head>
 <body class="bg-gray-50 min-h-screen text-gray-800" x-data="fluxograma()">
 
@@ -1210,6 +1218,7 @@ document.addEventListener('DOMContentLoaded', function(){
 
 </body>
 </html>
+
 
 
 
