--- a/index.html
+++ b/index.html
@@ -213,6 +213,8 @@ body.app-standalone details.app-collapsible .app-muted {
 <!-- App behavior -->
 <meta name="theme-color" content="#ffffff">
 
+  <link rel="manifest" href="manifest.json">
+  
 </head>
 <body class="bg-gray-50 min-h-screen text-gray-800" x-data="fluxograma()">
 
@@ -1218,6 +1220,7 @@ document.addEventListener('DOMContentLoaded', function(){
 
 </body>
 </html>
+
 
 
 
