--- a/index.html
+++ b/index.html
@@ -206,11 +206,9 @@ body.app-standalone details.app-collapsible .app-muted {
 <!-- ===================== -->
 
 <!-- App / Home Screen Icons -->
-<link rel="apple-touch-icon" href="apple-touch-icon-final.png">
-
-<link rel="icon" type="image/png" sizes="192x192" href="icon-192-final.png">
-<link rel="icon" type="image/png" sizes="512x512" href="icon-512-final.png">
-
+<link rel="apple-touch-icon" href="apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="192x192" href="icon-192.png">
+<link rel="icon" type="image/png" sizes="512x512" href="icon-512.png">
 <link rel="manifest" href="manifest.json">
 <meta name="theme-color" content="#ffffff">
 
@@ -1224,6 +1222,7 @@ document.addEventListener('DOMContentLoaded', function(){
 
 </body>
 </html>
+
 
 
 
