--- a/index.html
+++ b/index.html
@@ -1124,7 +1124,7 @@ document.addEventListener('DOMContentLoaded', function(){
     const details = document.createElement("details");
     details.className = "app-collapsible";
     const summary = document.createElement("summary");
-    summary.textContent = "Authors & collaborators";
+    summary.textContent = "Authors & Contributors";
     details.appendChild(summary);
 
     const body = document.createElement("div");
@@ -1222,6 +1222,7 @@ document.addEventListener('DOMContentLoaded', function(){
 
 </body>
 </html>
+
 
 
 
