--- a/index.html
+++ b/index.html
@@ -123,6 +123,11 @@ details.app-collapsible {
     line-height: 1.35;
     margin-top: 8px;
   }
+  /* App UI polish: center authors content and normalize spacing between boxes */
+  details.app-collapsible { margin-top: 10px !important; }
+  details.app-collapsible .app-muted { text-align: center; }
+  #fluxograma-hero { margin-top: 12px !important; }
+
 }
 
 /* iOS Add-to-Home-Screen (Safari) does not always support display-mode media query reliably.
@@ -164,58 +169,15 @@ body.app-standalone details.app-collapsible .app-muted {
   line-height: 1.35;
   margin-top: 8px;
 }
+
+body.app-standalone details.app-collapsible { margin-top: 10px !important; }
+body.app-standalone details.app-collapsible .app-muted { text-align: center; }
+body.app-standalone #fluxograma-hero { margin-top: 12px !important; }
+
 </style>
 <!-- APP-ONLY STYLES END -->
 <!-- ===================== -->
 
-
-<!-- ===================== -->
-<!-- INSTALL-PROMPT (mobile browser only) BEGIN -->
-<style id="install-prompt-styles">
-  .install-prompt {
-    position: fixed;
-    left: 12px;
-    right: 12px;
-    bottom: 12px;
-    z-index: 9998;
-    border: 1px solid rgba(0,0,0,0.10);
-    border-radius: 14px;
-    background: rgba(255,255,255,0.92);
-    backdrop-filter: blur(8px);
-    padding: 10px 12px;
-    font: 13px system-ui, -apple-system, Segoe UI, Roboto, Arial;
-    color: rgba(0,0,0,0.75);
-    display: none;
-  }
-  .install-prompt .row { display:flex; align-items:center; gap:10px; }
-  .install-prompt .txt { flex: 1; line-height: 1.25; }
-  .install-prompt .btn {
-    border: 1px solid rgba(0,0,0,0.12);
-    background: rgba(0,0,0,0.04);
-    border-radius: 10px;
-    padding: 6px 10px;
-    font-weight: 600;
-    cursor: pointer;
-  }
-  .install-prompt .btn.primary {
-    background: rgba(37, 99, 235, 0.10);
-    border-color: rgba(37, 99, 235, 0.25);
-  }
-  .install-prompt .btn:active { transform: translateY(1px); }
-  .install-prompt .hint {
-    margin-top: 8px;
-    font-size: 12px;
-    color: rgba(0,0,0,0.55);
-    display:none;
-  }
-  .install-prompt .hint b { font-weight: 700; }
-  @media (min-width: 900px) {
-    /* don't show on large desktop */
-    .install-prompt { left: auto; right: 14px; max-width: 420px; }
-  }
-</style>
-<!-- INSTALL-PROMPT END -->
-<!-- ===================== -->
 
 <!-- App / Home Screen Icons -->
 <link rel="apple-touch-icon" href="apple-touch-icon.png">
@@ -1159,7 +1121,7 @@ document.addEventListener('DOMContentLoaded', function(){
     details.appendChild(summary);
 
     const body = document.createElement("div");
-    body.className = "app-muted";
+    body.className = "app-muted text-center";
     body.innerHTML = authors.innerHTML;
     details.appendChild(body);
 
@@ -1192,72 +1154,6 @@ document.addEventListener('DOMContentLoaded', function(){
 })();
 </script>
 <!-- === APP-ONLY ENHANCEMENTS END === -->
-
-
-<script>
-(function(){
-  const DISMISS_KEY = "install_prompt_dismissed_v1";
-
-  function isStandalone() {
-    const dm = (window.matchMedia && window.matchMedia("(display-mode: standalone)").matches);
-    const ios = (typeof navigator !== "undefined" && navigator.standalone === true);
-    return !!(dm || ios);
-  }
-
-  function isMobileish() {
-    return (window.innerWidth <= 820) || ("ontouchstart" in window) || (navigator.maxTouchPoints > 0);
-  }
-
-  if (isStandalone()) return;
-  if (!isMobileish()) return;
-  if (localStorage.getItem(DISMISS_KEY) === "1") return;
-
-  // Create prompt
-  const el = document.createElement("div");
-  el.className = "install-prompt";
-  el.innerHTML = `
-    <div class="row">
-      <div class="txt">Tip: install the <b>Main App</b> (recommended) so you don’t end up with multiple icons.</div>
-      <button class="btn primary" type="button" id="ip-go">Open Main App</button>
-      <button class="btn" type="button" id="ip-x">✕</button>
-    </div>
-    <div class="hint" id="ip-hint"></div>
-  `;
-  document.body.appendChild(el);
-
-  const hint = el.querySelector("#ip-hint");
-  const ua = navigator.userAgent || "";
-
-  function showHint() {
-    // iOS Safari
-    const isIOS = /iPhone|iPad|iPod/i.test(ua);
-    const isSafari = isIOS && /Safari/i.test(ua) && !/CriOS|FxiOS/i.test(ua);
-    if (isSafari) {
-      hint.innerHTML = `On iPhone: open the <b>Main App (Landing)</b> page, then tap <b>Share</b> (square + arrow) → <b>Add to Home Screen</b>.`;
-
-    } else {
-      hint.innerHTML = `On Android: open the <b>Main App (Landing)</b> page, then menu (⋮) → <b>Add to Home screen</b> / <b>Install app</b>.`;
-
-    }
-    hint.style.display = "block";
-  }
-
-  el.querySelector("#ip-go").addEventListener("click", () => {
-    // Redirect user to the Landing page (Main App) where installation is offered.
-    // Use a relative URL so it works on GitHub Pages/Cloudflare without hardcoding.
-    window.location.href = "https://diggunifesp.github.io/75cs-landing/?install=1";
-  });
-  // If user taps the text, show brief instructions (optional)
-  el.querySelector(".txt").addEventListener("click", showHint);
-  el.querySelector("#ip-x").addEventListener("click", () => {
-    localStorage.setItem(DISMISS_KEY, "1");
-    el.remove();
-  });
-
-  // show after a short delay so it doesn't flash during load
-  setTimeout(() => { el.style.display = "block"; }, 800);
-})();
-</script>
 
 
 <!-- App-only: adjust the flowchart zoom hint for touch devices -->
